# ChangeLog for media-libs/libpng
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.238 2009/10/08 17:42:58 armin76 Exp $

  08 Oct 2009; Raúl Porcel <armin76@gentoo.org> libpng-1.2.38.ebuild:
  ia64/m68k/s390/sh stable wrt #284195

  30 Sep 2009; Tobias Klausmann <klausman@gentoo.org> libpng-1.2.38.ebuild:
  Stable on alpha, bug #284195

*libpng-1.2.40 (23 Sep 2009)

  23 Sep 2009; Mike Frysinger <vapier@gentoo.org> +libpng-1.2.40.ebuild:
  Version bump #284855 by Lars Wendler.

  15 Sep 2009; Jeroen Roovers <jer@gentoo.org> libpng-1.2.38.ebuild:
  Stable for HPPA (bug #284195).

  15 Sep 2009; Joseph Jezak <josejx@gentoo.org> libpng-1.2.38.ebuild:
  Marked ppc stable for bug #284195

  12 Sep 2009; Tiago Cunha <tcunha@gentoo.org> libpng-1.2.38.ebuild:
  stable sparc, bug 284195

  11 Sep 2009; Markus Meier <maekke@gentoo.org> libpng-1.2.38.ebuild:
  amd64/arm/x86 stable, bug #284195

  09 Sep 2009; Tom Gall <tgall@gentoo.org> libpng-1.2.38.ebuild:
  stable on ppc64, bug #284195

  08 Sep 2009; Mike Frysinger <vapier@gentoo.org> libpng-1.2.38.ebuild:
  Allow xz-utils in place of lzma-utils #282684 by Mr. B.

*libpng-1.2.38 (16 Jul 2009)

  16 Jul 2009; Mike Frysinger <vapier@gentoo.org> +libpng-1.2.38.ebuild:
  Version bump.

  21 Jun 2009; Brent Baude <ranger@gentoo.org> libpng-1.2.37.ebuild:
  Marking libpng-1.2.37 ppc for bug 272970

  16 Jun 2009; Brent Baude <ranger@gentoo.org> libpng-1.2.37.ebuild:
  Marking libpng-1.2.37 ppc64 for bug 272970

  10 Jun 2009; Markus Meier <maekke@gentoo.org> libpng-1.2.37.ebuild:
  amd64 stable, bug #272970

  10 Jun 2009; Raúl Porcel <armin76@gentoo.org> libpng-1.2.37.ebuild:
  arm/ia64/m68k/s390/sh/sparc stable wrt #272970

  08 Jun 2009; Christian Faulhammer <fauli@gentoo.org> libpng-1.2.37.ebuild:
  stable x86, security bug 272970

  07 Jun 2009; Jeroen Roovers <jer@gentoo.org> libpng-1.2.37.ebuild:
  Stable for HPPA (bug #272970).
