@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST libpng-1.2.38.tar.lzma 525539 RMD160 bd47cebe5083b023dbbae20fa3f8ec4de76d1d30 SHA1 cb94c9886250f2ec7efbcb779c30bdc514a7fd00 SHA256 ebb6e83c06dde0f97f2cf384b61e0c7b7245df4b46e06d3060441bb236aef624
 DIST libpng-1.2.40.tar.bz2 629950 RMD160 1ba929e73493bfc81bc95113f69f0ff9c5f47814 SHA1 776cf18a799af58303590f6996f6d3aa5a7908ff SHA256 a6197352ad5b79a9a1ce0dd59f5e737cfbf909e0f3c5f64631cf0d93549e4e40
+DIST libpng-1.2.41.tar.bz2 670288 RMD160 b9d3f22ef7fbe43327cb3d5153fed1ca237785cb SHA1 e859ce73c5344ce10576d03cab3b660459b30c13 SHA256 a172c5afe4668a31eb090d14be7fc2811a9fec8568a785badd30280f47a27e00
 EBUILD libpng-1.2.38.ebuild 822 RMD160 67ae290530cc44105460228bb115490e96046050 SHA1 1cce15c96ecccabbcd8e9f6e6db2b33c85001518 SHA256 e68d54123a1291094cb1207318fd31602f9091eccbe83f3a0dbace24b2e8a3f6
-EBUILD libpng-1.2.40.ebuild 827 RMD160 a0f52e32262737c917fd6ddeb500b4f3d1de7a9d SHA1 3b4386124bf254b29f712ab176351b8ac98ad558 SHA256 17de29c57a1ee6eb53d109e188969772f706ada70089f2a30b1648c0c2877fb5
-MISC ChangeLog 31530 RMD160 16cb5d36ce5020d736961041b601f178494faebf SHA1 0e62d52663df156021af189fef317e422f8d8137 SHA256 b09df560d5a8c3ebca635a1a5bfb95b8edf17be5726bf7f169fc95db47145d1b
+EBUILD libpng-1.2.40.ebuild 765 RMD160 ee9f9559a20f31dea3ed1752b45b1a0679e3748c SHA1 4a9e0828967d754ba3daad5e8552728f983c90d4 SHA256 de4a17d6121cb94b1d605fc7d8348ef1499f368beb408c3f7acfcf0230d25d90
+EBUILD libpng-1.2.41.ebuild 770 RMD160 2d581d08a7160c3628714496270d1f5fab60b531 SHA1 ceaa21cbd1a59bdeb3697274be6da5f314c68c4f SHA256 64099f9f76758e7d795e38f6290537dfd767364708fea6ec62a004ada5f7814b
+MISC ChangeLog 31671 RMD160 b2608aa7a57a9b4ba82851a8ea5f016bf2da7589 SHA1 2d5378f4329c5ecc8e5197b10b2edbb04964312a SHA256 01226b0c5f13a7d3187a879f6bb5fd39371b7f5f3588b84f1b0d60b223272326
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.13 (GNU/Linux)
 
-iF4EAREIAAYFAksv/jUACgkQTwhj9JtAlp6hggD/YM3k6gFsbt3iOGb4GGBGvOxU
-fuvIeuSbYo4V5oHy3TwBAKNhUfpOYdA84QNcQwIRXB6NQZ6VuE5iUf19ZjLHZTeG
-=kZ/D
+iF4EAREIAAYFAkswABYACgkQTwhj9JtAlp4/zQEAm9RerK9VMkFuqFOHHLwU7mJo
+Y2JG34MPhkXbX/8UuxQA/1b1tqWB/X1jkNL7LulnEWj7gBlhjHuJdi3T61gBnuBH
+=fcJJ
 -----END PGP SIGNATURE-----
