@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libpng
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.238 2009/10/08 17:42:58 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.239 2009/12/21 23:07:53 vapier Exp $
+
+*libpng-1.2.41 (21 Dec 2009)
+
+  21 Dec 2009; Mike Frysinger <vapier@gentoo.org> +libpng-1.2.41.ebuild:
+  Version bump #297835 by Dror Levin.
 
   08 Oct 2009; Raúl Porcel <armin76@gentoo.org> libpng-1.2.38.ebuild:
   ia64/m68k/s390/sh stable wrt #284195
